# Multi-Modal-Semantic-Search-Engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: build_dino_index.py  build_image_index.py  build_index.py  classify_movements.py  export_index.py  fetch_images.py  fetch_nga_data.py  import_index.py  search.py  search_images.py  ui.py
space/: Dockerfile  README.md  build_chroma.py  requirements.txt
src/multimodal_search/: config.py
src/multimodal_search/api/: app.py
src/multimodal_search/embed/: clip.py  dino.py  movement.py  text.py
src/multimodal_search/ingest/: images.py  nga.py
src/multimodal_search/search/: query.py
src/multimodal_search/store/: chroma.py  memory.py
web/: .env.example  README.md  vercel.json
web/app/: layout.tsx  page.tsx
web/app/api/health/: route.ts
web/app/api/keep-warm/: route.ts
web/app/api/random/: route.ts
web/app/api/search/: route.ts
web/app/api/similar/: route.ts
web/components/: ArtworkCard.tsx  MovementBadge.tsx
web/lib/: api.ts
