[project]
name = "multimodal-search"
version = "0.1.0"
description = "Semantic search over the National Gallery of Art open dataset — CLIP, MiniLM, DINOv2"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort
select = ["E", "W", "F", "I"]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["multimodal_search"]
